[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abyssos"
version = "0.1.0"
description = "Abyssos terminal colour theme — very dark navy/charcoal with teal/cyan hero accent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["terminal", "theme", "colour", "ghostty", "blink"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/terry-li-hm/abyssos"
Repository = "https://github.com/terry-li-hm/abyssos"
